docs: SEO/GEO 최적화 및 AdSense 승인을 위한 고품질 콘텐츠 보강

--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -3,20 +3,45 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="title-us">미국 금융시장 심리</title>
-<meta name="description" content="미국 주식시장의 공포 탐욕 지수(CNN Fear & Greed Index)를 확인하고 투자에 참고하세요." data-i18n="desc-us"/>
+<title data-i18n="title-us">미국 주식 공포 탐욕 지수 - CNN Fear & Greed Index 분석 | anse.ai</title>
+<meta name="description" content="미국 주식 시장의 실시간 공포 탐욕 지수(CNN Fear & Greed Index)를 확인하세요. S&P 500 모멘텀, 변동성, 옵션 데이터를 바탕으로 전문적인 시장 심리 분석을 제공합니다." data-i18n="desc-us"/>
 <link rel="canonical" href="https://anse.ai.kr/sentiment.html"/>
 
-<meta property="og:title" content="미국 금융시장 심리" data-i18n="title-us"/>
-<meta property="og:description" content="미국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요." data-i18n="desc-us"/>
+<!-- Open Graph / Facebook -->
+<meta property="og:site_name" content="anse.ai - 주식 시장 심리 분석"/>
+<meta property="og:title" content="미국 주식 공포 탐욕 지수 - CNN Fear & Greed Index 분석" data-i18n="title-us"/>
+<meta property="og:description" content="미국 주식 시장의 투자 심리를 한눈에 파악하세요." data-i18n="desc-us"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/sentiment.html"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
+<meta name="author" content="anse.ai"/>
 
-<meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="미국 금융시장 심리" data-i18n="title-us"/>
-<meta name="twitter:description" content="미국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요." data-i18n="desc-us"/>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="미국 주식 공포 탐욕 지수 - CNN Fear & Greed Index 분석" data-i18n="title-us"/>
+<meta name="twitter:description" content="미국 주식 시장의 투자 심리를 한눈에 파악하세요." data-i18n="desc-us"/>
 <meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
+
+<!-- Structured Data (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "anse.ai US Fear & Greed Index Analysis",
+  "url": "https://anse.ai.kr/sentiment.html",
+  "description": "Analysis of US stock market sentiment using CNN Business Fear & Greed Index components.",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "미국 공포 탐욕 지수란 무엇인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "미국 주식 시장의 투자 심리를 측정하기 위해 CNN Business에서 개발한 지수입니다. 시장의 모멘텀, 주가 강도, 옵션 거래량 등 7가지 요소를 종합하여 산출합니다."
+      }
+    }
+  ]
+}
+</script>
 
 <!-- Existing styles and icons -->
 <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
@@ -365,6 +390,35 @@
 </div>
 </div>
 
+
+<!-- Educational Content Section -->
+<article class="mt-16 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-12">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+        <section class="flex flex-col gap-4">
+            <h2 class="text-2xl font-black dark:text-white" data-i18n="understanding-us-fng-title">미국 시장 심리 이해하기</h2>
+            <p class="text-base leading-relaxed text-[#49699c] dark:text-slate-400 break-keep" data-i18n="understanding-us-fng-desc">
+                미국 주식 시장은 전 세계 금융의 중심이며, 투자 심리의 변화에 매우 민감하게 반응합니다. CNN Business의 공포와 탐욕 지수는 시장의 7가지 주요 지표를 종합하여 현재의 심리 상태를 나타냅니다. 이 지수가 극단적인 공포에 도달했을 때는 시장의 반등 기회를, 극단적인 탐욕에 도달했을 때는 조정의 위험을 경고하는 신호로 활용될 수 있습니다.
+            </p>
+        </section>
+        <section class="flex flex-col gap-4">
+            <h2 class="text-2xl font-black dark:text-white" data-i18n="how-to-us-title">미국 시장 심리 활용 가이드</h2>
+            <div class="space-y-4">
+                <div class="p-4 rounded-lg bg-slate-50 dark:bg-slate-900/50">
+                    <strong class="text-primary block mb-1" data-i18n="how-to-us-step-1-t">1단계: S&P 500 모멘텀 체크</strong>
+                    <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="how-to-us-step-1-d">CNN 지수가 지시하는 심리가 실제 S&P 500 지수의 추세와 일치하는지 확인합니다.</p>
+                </div>
+                <div class="p-4 rounded-lg bg-slate-50 dark:bg-slate-900/50">
+                    <strong class="text-primary block mb-1" data-i18n="how-to-us-step-2-t">2단계: VIX 변동성 대조</strong>
+                    <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="how-to-us-step-2-d">공포 지수인 VIX가 급등할 때 나타나는 지수의 변화를 통해 시장의 바닥을 탐색합니다.</p>
+                </div>
+                <div class="p-4 rounded-lg bg-slate-50 dark:bg-slate-900/50">
+                    <strong class="text-primary block mb-1" data-i18n="how-to-us-step-3-t">3단계: 글로벌 자금 흐름 관찰</strong>
+                    <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="how-to-us-step-3-d">극심한 탐욕 구간에서는 글로벌 자산 배분 전략을 통해 리스크를 분산합니다.</p>
+                </div>
+            </div>
+        </section>
+    </div>
+</article>
 
 <!-- Footer -->
 <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
