--- a/public/about.html
+++ b/public/about.html
@@ -166,9 +166,23 @@
             
             <section class="mb-12">
                 <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="about-intro-title">anse.ai의 정체성</h2>
-                <p class="leading-relaxed" data-i18n="about-intro-desc">
-                    anse.ai는 복잡한 금융 데이터 속에서 개인 투자자(개미)들이 시장의 심리를 직관적으로 파악하고, 인공지능의 도움을 받아 더 현명한 투자 결정을 내릴 수 있도록 돕는 디지털 조력자입니다.
+                <p class="leading-relaxed text-[#49699c] dark:text-slate-400" data-i18n="about-intro-desc">
+                    anse.ai는 복잡한 금융 데이터 속에서 개인 투자자들이 시장의 심리를 직관적으로 파악하고, 최첨단 인공지능의 도움을 받아 더 현명한 투자 결정을 내릴 수 있도록 돕는 디지털 금융 조력자입니다.
                 </p>
+            </section>
+
+            <section class="mb-12">
+                <h2 class="text-xl font-bold mb-6 dark:text-white" data-i18n="about-tech-title">활용 기술 및 데이터</h2>
+                <div class="grid gap-6">
+                    <div class="p-6 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-[#e7ecf4] dark:border-[#1e293b]">
+                        <strong class="block text-lg mb-2 text-primary" data-i18n="about-tech-1-t">실시간 데이터 분석</strong>
+                        <p class="text-sm leading-relaxed" data-i18n="about-tech-1-d">한국거래소(KRX)와 CNN Business 등 공신력 있는 기관의 데이터를 실시간으로 수집하여 자체적인 알고리즘으로 분석합니다.</p>
+                    </div>
+                    <div class="p-6 rounded-xl bg-slate-50 dark:bg-slate-900/50 border border-[#e7ecf4] dark:border-[#1e293b]">
+                        <strong class="block text-lg mb-2 text-primary" data-i18n="about-tech-2-t">멀티 AI 모델 앙상블</strong>
+                        <p class="text-sm leading-relaxed" data-i18n="about-tech-2-d">Google Gemini, OpenAI GPT, xAI Grok 등 세계 최고의 AI 모델들을 결합하여 시장 상황에 대한 다각도 분석 리포트를 생성합니다.</p>
+                    </div>
+                </div>
             </section>
 
             <section class="mb-8">
