--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,51 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="title-korea">국내 금융시장 심리</title> <!-- Keep original title -->
-<meta name="description" content="한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요." data-i18n="desc-korea"/> <!-- Keep original description -->
-<link rel="canonical" href="https://anse.ai.kr/"/> <!-- Keep original canonical -->
+<title data-i18n="title-korea">KOSPI 공포 탐욕 지수 - 실시간 국내 주식 시장 심리 분석 | anse.ai</title>
+<meta name="description" content="코스피(KOSPI)의 변동성과 모멘텀을 분석하여 실시간 공포 탐욕 지수를 제공합니다. AI 기반 시장 분석과 투자 격언으로 현명한 투자 판단을 도와드립니다." data-i18n="desc-korea"/>
+<link rel="canonical" href="https://anse.ai.kr/"/>
 
-<meta property="og:title" content="국내 금융시장 심리" data-i18n="title-korea"/> <!-- Keep original og tags -->
-<meta property="og:description" content="한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요." data-i18n="desc-korea"/>
+<!-- Open Graph / Facebook -->
+<meta property="og:site_name" content="anse.ai - 주식 시장 심리 분석"/>
+<meta property="og:title" content="KOSPI 공포 탐욕 지수 - 실시간 국내 주식 시장 심리 분석" data-i18n="title-korea"/>
+<meta property="og:description" content="실시간 KOSPI 공포 탐욕 지수와 AI 시장 리포트를 확인하세요." data-i18n="desc-korea"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
+<meta name="author" content="anse.ai"/>
 
-<meta name="twitter:card" content="summary"/> <!-- Keep original twitter tags -->
-<meta name="twitter:title" content="국내 금융시장 심리" data-i18n="title-korea"/>
-<meta name="twitter:description" content="한국 주식시장의 공포 탐욕 지수를 확인하고 투자에 참고하세요." data-i18n="desc-korea"/>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:title" content="KOSPI 공포 탐욕 지수 - 실시간 국내 주식 시장 심리 분석" data-i18n="title-korea"/>
+<meta name="twitter:description" content="실시간 KOSPI 공포 탐욕 지수와 AI 시장 리포트를 확인하세요." data-i18n="desc-korea"/>
 <meta name="twitter:image" content="https://anse.ai.kr/images/neutral.png"/>
+
+<!-- Structured Data (JSON-LD) for GEO -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "anse.ai KOSPI Fear & Greed Index",
+  "url": "https://anse.ai.kr/",
+  "description": "Real-time KOSPI Fear & Greed Index based on market momentum, volatility, and sentiment.",
+  "applicationCategory": "FinanceApplication",
+  "operatingSystem": "All",
+  "author": {
+    "@type": "Organization",
+    "name": "anse.ai"
+  },
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "공포와 탐욕 지수란 무엇인가요?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "투자자들의 심리 상태를 0에서 100 사이의 숫자로 나타낸 지표입니다. 0에 가까울수록 극심한 공포를, 100에 가까울수록 극심한 탐욕을 의미합니다."
+      }
+    }
+  ]
+}
+</script>
 
 <!-- Existing styles and icons -->
 <!-- Keep this for now, will remove later if Tailwind replaces all -->
@@ -454,6 +485,35 @@
     </div>
 </div>
 </div>
+
+<!-- Educational Content Section for SEO/AdSense -->
+<article class="mt-16 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-12">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+        <section class="flex flex-col gap-4">
+            <h2 class="text-2xl font-black dark:text-white" data-i18n="what-is-fng-title">공포와 탐욕 지수란 무엇인가?</h2>
+            <p class="text-base leading-relaxed text-[#49699c] dark:text-slate-400 break-keep" data-i18n="what-is-fng-desc">
+                공포와 탐욕 지수(Fear & Greed Index)는 투자자들이 현재 시장을 어떻게 느끼고 있는지를 보여주는 심리 지표입니다. 시장이 과열되어 모두가 낙관적일 때는 '탐욕'이 지배하고, 시장이 급락하여 모두가 패닉에 빠졌을 때는 '공포'가 지배합니다. 이 지수는 숫자로 표현되어 투자자들이 객관적인 시각을 유지할 수 있도록 돕습니다.
+            </p>
+        </section>
+        <section class="flex flex-col gap-4">
+            <h2 class="text-2xl font-black dark:text-white" data-i18n="how-to-use-title">공포 탐욕 지수 투자 활용법 3단계</h2>
+            <div class="space-y-4">
+                <div class="p-4 rounded-lg bg-slate-50 dark:bg-slate-900/50">
+                    <strong class="text-primary block mb-1" data-i18n="how-to-step-1-t">1단계: 극단적 공포 확인</strong>
+                    <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="how-to-step-1-d">지수가 25 이하인 경우, 과도한 공포로 인한 저점 매수 기회인지 검토합니다.</p>
+                </div>
+                <div class="p-4 rounded-lg bg-slate-50 dark:bg-slate-900/50">
+                    <strong class="text-primary block mb-1" data-i18n="how-to-step-2-t">2단계: 탐욕 구간 리스크 관리</strong>
+                    <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="how-to-step-2-d">지수가 75 이상이면 시장 과열을 경계하고 현금 비중 확보를 고민합니다.</p>
+                </div>
+                <div class="p-4 rounded-lg bg-slate-50 dark:bg-slate-900/50">
+                    <strong class="text-primary block mb-1" data-i18n="how-to-step-3-t">3단계: AI 어드바이저와 대조</strong>
+                    <p class="text-sm text-[#49699c] dark:text-slate-400" data-i18n="how-to-step-3-d">지수 숫자뿐만 아니라 Gemini나 GPT가 분석한 시장의 세부 지표를 함께 읽어 객관성을 높입니다.</p>
+                </div>
+            </div>
+        </section>
+    </div>
+</article>
 
 <!-- Footer / Data Source -->
 <footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
