--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -250,10 +250,16 @@
                         <div class="pt-6 border-t border-[#e7ecf4] dark:border-[#1e293b]">
                             <h5 class="font-bold dark:text-white mb-2" data-i18n="instant-report">즉시 리포트 발송</h5>
                             <p class="text-xs text-[#49699c] dark:text-slate-400 mb-4" data-i18n="instant-report-desc">현재 시장 분석 리포트를 즉시 이메일로 발송합니다.</p>
-                            <button id="send-report-btn" class="w-fit px-6 py-2.5 bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white text-sm font-bold rounded-lg hover:bg-primary hover:text-white transition-all flex items-center gap-2">
-                                <span class="material-symbols-outlined text-sm">send</span>
-                                <span data-i18n="send-now">리포트 보내기</span>
-                            </button>
+                            <div class="flex flex-col gap-2">
+                                <button id="send-korea-report-btn" class="w-full px-6 py-2.5 bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white text-sm font-bold rounded-lg hover:bg-primary hover:text-white transition-all flex items-center gap-2">
+                                    <span class="material-symbols-outlined text-sm">flag</span>
+                                    <span data-i18n="send-korea-report">한국 시장 리포트 보내기</span>
+                                </button>
+                                <button id="send-us-report-btn" class="w-full px-6 py-2.5 bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-white text-sm font-bold rounded-lg hover:bg-primary hover:text-white transition-all flex items-center gap-2">
+                                    <span class="material-symbols-outlined text-sm">public</span>
+                                    <span data-i18n="send-us-report">미국 시장 리포트 보내기</span>
+                                </button>
+                            </div>
                         </div>
                     </section>
                 </div>
@@ -797,9 +803,20 @@
         });
 
         // 'Send Report' Button Click Logic
-        document.getElementById('send-report-btn')?.addEventListener('click', async () => {
+        document.getElementById('send-korea-report-btn')?.addEventListener('click', () => {
+            if (confirm(i18n.translate("move-to-korea-confirm") || "한국 시장 리포트는 한국 금융시장 심리 페이지에서 보낼 수 있습니다. 이동하시겠습니까?")) {
+                window.location.href = "/index.html";
+            }
+        });
+
+        document.getElementById('send-us-report-btn')?.addEventListener('click', async () => {
+            await sendMarketReport('us');
+        });
+
+        async function sendMarketReport(market) {
             const selectedLang = document.querySelector('input[name="report-lang"]:checked')?.value || 'ko';
-            const btn = document.getElementById('send-report-btn');
+            const btnId = market === 'korea' ? 'send-korea-report-btn' : 'send-us-report-btn';
+            const btn = document.getElementById(btnId);
             const originalContent = btn.innerHTML;
 
             const { data: { user } } = await supabaseClient.auth.getUser();
@@ -808,16 +825,17 @@
                 return;
             }
 
-            // Collect US Market Data
+            // Collect US Market Data from UI
             const marketData = {
                 score: document.getElementById('score')?.textContent,
                 status: document.getElementById('status')?.textContent,
                 proverb: document.getElementById('proverb-text')?.textContent,
-                advice: document.getElementById('sentiment-quote')?.textContent,
+                advice: document.getElementById('advisor-advice-display')?.innerHTML, // Gemini HTML
                 kospi: {
                     value: document.getElementById('market-index-value')?.textContent,
                     change_rate: "",
                     change_point: "S&P 500 INDEX",
+                    link: "https://www.google.com/finance/quote/.INX:INDEXSP"
                 },
                 indicators: []
             };
@@ -833,7 +851,7 @@
                         user_email: user.email, 
                         language: selectedLang,
                         market_data: marketData,
-                        market: 'us',
+                        market: market,
                         test_mode: false 
                     })
                 });
@@ -850,7 +868,7 @@
                 btn.disabled = false;
                 btn.innerHTML = originalContent;
             }
-        });
+        }
 
         if (closeModal) {
             closeModal.addEventListener('click', () => {
