--- a/public/index.html
+++ b/public/index.html
@@ -1332,12 +1332,20 @@
                 return;
             }
 
+            // Extract ONLY the current language version of AI advice
+            const adviceContainer = document.getElementById('advisor-advice-display');
+            let filteredAdvice = "";
+            if (adviceContainer) {
+                const langDiv = adviceContainer.querySelector(`.lang-${currentLang}`);
+                filteredAdvice = langDiv ? langDiv.innerHTML : adviceContainer.innerHTML;
+            }
+
             // Collect Market Data
             const marketData = {
                 score: document.getElementById('score')?.textContent,
                 status: document.getElementById('status')?.textContent,
                 proverb: document.getElementById('proverb-text')?.textContent,
-                advice: document.getElementById('advisor-advice-display')?.innerHTML,
+                advice: filteredAdvice,
                 kospi: {
                     value: document.getElementById('kospi-value')?.textContent,
                     change_rate: document.getElementById('kospi-change-rate')?.textContent,
