--- a/public/index.html
+++ b/public/index.html
@@ -1175,43 +1175,40 @@
     </script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-    document.getElementById('download-btn').addEventListener('click', async function() {
+    document.getElementById('download-btn').addEventListener('click', function() {
+        console.log("=== DOWNLOAD BUTTON CLICKED ===");
+        alert("캡처를 시작합니다. 잠시만 기다려주세요."); // 작동 확인용
+
         const target = document.querySelector('main'); 
-        if (!target) return;
+        if (!target) {
+            console.error("Target 'main' element not found!");
+            return;
+        }
 
         const btn = document.getElementById('download-btn');
         const originalContent = btn.innerHTML;
         btn.disabled = true;
-        btn.innerHTML = `<span class="material-symbols-outlined animate-spin text-sm">sync</span>`;
 
-        try {
-            const canvas = await html2canvas(target, {
-                scale: 2,
-                useCORS: true,
-                backgroundColor: "#f8f9fa",
-                logging: true, // 상세 로그 활성화
-                onclone: (clonedDoc) => {
-                    const clonedMain = clonedDoc.querySelector('main');
-                    if (clonedMain) {
-                        // 화면 그대로 여백 없이 저장되도록 설정
-                        clonedMain.style.margin = "0";
-                        clonedMain.style.padding = "0";
-                    }
-                }
-            });
-
+        html2canvas(target, {
+            useCORS: true,
+            scale: 2,
+            backgroundColor: "#f8f9fa",
+            logging: true,
+        }).then(canvas => {
+            console.log("Canvas generated successfully");
+            const dataUrl = canvas.toDataURL('image/png');
             const link = document.createElement('a');
-            link.download = `anse_report_${new Date().getTime()}.png`;
-            link.href = canvas.toDataURL('image/png');
+            link.download = `report_${Date.now()}.png`;
+            link.href = dataUrl;
             link.click();
-
-        } catch (err) {
-            console.error("Capture error:", err);
-            alert("이미지 저장 중 오류가 발생했습니다.");
-        } finally {
+            console.log("Download triggered");
+        }).catch(err => {
+            console.error("html2canvas error:", err);
+            alert("에러 발생: " + err.message);
+        }).finally(() => {
             btn.disabled = false;
             btn.innerHTML = originalContent;
-        }
+        });
     });
 });
 
